fixed z-index for staticTop toolbar

--- a/styles/skeleform.scss
+++ b/styles/skeleform.scss
@@ -90,7 +90,7 @@
         left: 0;
         width: 100%;
         background-color: lighten($firstPanelColor, 10%);
-        z-index: 2001;
+        z-index: 10000;
         padding-top: 10px;
         height: 60px;
         border-bottom: solid 3px $firstPanelColorBorder;
